<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Button android:text="@string/add_event" android:layout_width="wrap_content"
		android:id="@+id/add_event_button" android:layout_height="wrap_content"></Button>
	<Button android:text="@string/recent_history"
		android:layout_width="wrap_content" android:id="@+id/see_recent_history_button"
		android:layout_height="wrap_content"></Button>
	<Button android:layout_width="wrap_content" android:id="@+id/see_recent_credits_button"
		android:layout_height="wrap_content" android:text="@string/recent_credits"></Button>
	<Button android:text="@string/recent_debits"
		android:layout_width="wrap_content" android:id="@+id/see_recent_debits_button"
		android:layout_height="wrap_content"></Button>
	<Button android:text="@string/list_persons"
		android:layout_width="wrap_content" android:id="@+id/list_persons"
		android:layout_height="wrap_content"></Button>
</LinearLayout>
